fixed scrolling issue on tutorial modal - bug where scrollbar is invisible though

--- a/src/components/Modal/Modal.css
+++ b/src/components/Modal/Modal.css
@@ -16,7 +16,7 @@
   /* border: 3px solid #558B6E; */
   border: 3px solid #FFFFFA;
   border-radius: 1.2rem;
-  padding: 2rem;
+  padding: 1.5rem 2rem;
   width: 80%;
   max-width: 35rem;
   color: #FFFFFA;
@@ -27,11 +27,9 @@
 .modal-content.tutorial {
   max-width: 70rem;
   height: 72vh;
+  min-height: 300px; /* Add this */
   overflow-y: auto;
-  padding: 2rem;
-  /* overflow: hidden; */
   overflow-x: hidden;
-  overflow-y: scroll;
 }
 
 .modal-close-button {
@@ -72,13 +70,13 @@
   font-family: 'Weird Words', Inter, sans-serif;
 }
 
-.modal-message {
+/* .modal-message {
   margin-bottom: 1rem;
-}
+} */
 
 .tutorial-message {
   line-height: 1.6;
-  margin-bottom: 1.5rem;
+  /* margin-bottom: 1.5rem; */
 }
 
 .tutorial-message p {
